Nicer styles on results

--- a/repl/index.html
+++ b/repl/index.html
@@ -8,13 +8,15 @@
 </head>
 
 <body>
-  <div id="controlls">
-    <button id="evaluate">Evaluate code</button>
-    or press cmd + e
-  </div>
   <div id="editors">
     <div id="container"></div>
-    <div id="results"></div>
+    <div id="results">
+      <div id="controlls">
+        <button id="evaluate">Evaluate code</button>
+        or press ctrl / cmd + e.
+      </div>
+      <div id="output"></div>
+    </div>
   </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
