clear code button

--- a/repl/index.html
+++ b/repl/index.html
@@ -12,8 +12,13 @@
     <div id="container"></div>
     <div id="results">
       <div id="controlls">
-        <button id="evaluate">Evaluate code</button>
-        or press ctrl / cmd + e.
+        <div class="left">
+          <button id="evaluate">Evaluate code</button> &nbsp;
+          or press ctrl / cmd + e.
+        </div>
+        <div class="right">
+          <button id="clear">Clear code</button>
+        </div>
       </div>
       <div id="output"></div>
     </div>
