Keyword tagged tuples

--- a/repl/index.html
+++ b/repl/index.html
@@ -14,7 +14,7 @@
       <div id="controlls">
         <div class="left">
           <button id="evaluate">Evaluate code</button> &nbsp;
-          or press ctrl / cmd + e.
+          or press ctrl / cmd + enter.
         </div>
         <div class="right">
           <button id="clear">Clear code</button>
